--- a/index.html
+++ b/index.html
@@ -2,36 +2,38 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-    <style type="text/css">
-        #mc_embed_signup {
-            clear: left;
-            font: 14px Helvetica, Arial, sans-serif;
-            width: 600px;
-        }
-    </style>
-    <link rel="stylesheet" href="index.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="index.css" />
     <title>Webinar</title>
 </head>
 
 <body>
-
     <div class="section">
-
         <div class="left">
+            <div class="radio-box">
+                <p>live</p>
+            </div>
 
-            <div class="live">LIVE </div>
-            <div class="header">ko si ti online <br> i kako te regruteri vide?</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias inventore laborum vel a quia repellat
-                labore! Excepturi nam, distinctio ut nisi quibusdam voluptates, quas doloribus quia laudantium sed
-                incidunt aut maxime doloremque illum rem porro. Officiis aspernatur blanditiis cupiditate molestiae odit
-                explicabo impedit placeat reprehenderit perferendis fuga, non ullam neque?</p>
+            <div class="header">
+                <h1>
+                    KO SI TI ONLINE <br />
+                    I KAKO TE REGRUTERI "citaju"?
+                </h1>
+            </div>
 
-            <div class="registracija">
+            <div class="text-content">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima,
+                odio. Ab, excepturi officia at deleniti quae ut beatae maxime nobis
+                odit minima, eius nesciunt rerum sint id quo facilis consectetur
+                laboriosam. Ullam delectus officia quam, sed nobis exercitationem
+                itaque saepe distinctio ab ducimus quis sint molestias fuga nam
+                reprehenderit ipsam.
+            </div>
+
+            <div class="form">
                 <div id="mc_embed_shell">
-
                     <div id="mc_embed_signup">
                         <form
                             action="https://danilovesovic.us21.list-manage.com/subscribe/post?u=2957fc996143954b173082935&amp;id=fe992cbd5f&amp;f_id=000155e1f0"
@@ -42,77 +44,84 @@
 
                                 <div class="mc-field-group">
                                     <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required=""
-                                        value="" placeholder="Unesi E-Mail za prijavu ">
+                                        value="" placeholder="Unesi E-Mail za prijavu " />
                                 </div>
-                                <div hidden=""><input type="hidden" name="tags" value="2820981"></div>
+                                <div hidden="">
+                                    <input type="hidden" name="tags" value="2820981" />
+                                </div>
                                 <div id="mce-responses" class="clearfalse">
-                                    <div class="response" id="mce-error-response" style="display: none;"></div>
-                                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                                    <div class="response" id="mce-error-response" style="display: none"></div>
+                                    <div class="response" id="mce-success-response" style="display: block"></div>
                                 </div>
-                                <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
-                                        name="b_2957fc996143954b173082935_fe992cbd5f" tabindex="-1" value=""></div>
+                                <div aria-hidden="true" style="position: absolute; left: -5000px">
+                                    <input type="text" name="b_2957fc996143954b173082935_fe992cbd5f" tabindex="-1"
+                                        value="" />
+                                </div>
                                 <div class="clear">
                                     <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                                        value="Prijavi se">
+                                        value="Prijavi se" />
                                 </div>
                             </div>
                         </form>
                     </div>
                     <script type="text/javascript"
                         src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-                    <script
-                        type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = EMAIL; ftypes[0] = merge;, fnames[1] = FNAME; ftypes[1] = merge;, fnames[2] = LNAME; ftypes[2] = merge;, fnames[4] = PHONE; ftypes[4] = merge; false }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+                    <script type="text/javascript">
+                        (function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = EMAIL; ftypes[0] = merge;, fnames[1] = FNAME; ftypes[1] = merge;, fnames[2] = LNAME; ftypes[2] = merge;, fnames[4] = PHONE; ftypes[4] = merge; false }(jQuery)); var $mcj = jQuery.noConflict(true);
+                    </script>
                 </div>
-
             </div>
         </div>
 
         <div class="right">
-
-            <div class="datum">
+            <div class="time-and-date">
                 <p>22.08.2023</p>
                 <p>18.30h</p>
             </div>
 
             <div class="profiles">
-                <div class="profile_1">
-                    <img src="/Bryan.jpeg" alt="">
-                    <p><span class="name">Bryan Cochran</span> <br> <span class="role">Talent Acquisition<br> Specialist
-                        </span></p>
+                <div class="profile profile-1">
+                    <img src="/Bryan.jpeg" alt="" />
+                    <p class="name">Bryan Cochran</p>
+                    <p class="role">
+                        Talent Acquisition <br />
+                        Specialist
+                    </p>
                 </div>
 
-                <div class="profile_2">
-                    <img src="/Nikola.jpg" alt="">
-                    <p><span class="name">Nikola Dojcinovic</span> <br> <span class="role">FrontEnd Developer<br> React
-                            Instruktor </span></p>
+                <div class="profile profile-2">
+                    <img src="/Nikola.jpg" alt="" />
+                    <p class="name">Nikola Dojcinovic</p>
+                    <p class="role">
+                        FrontEnd Developer <br />
+                        React Instruktor
+                    </p>
                 </div>
             </div>
-
-
         </div>
-
     </div>
 
     <script>
-        // select the target node
-        var target = document.getElementById('mce-success-response');
 
-        // create an observer instance
+        let target = document.getElementById('mce-success-response');
+        let input = document.querySelector("#mce-EMAIL")
+
+
         var observer = new MutationObserver(function (mutations) {
             mutations.forEach(function (mutation) {
                 if (target.innerHTML === "Thank you for subscribing!") {
-                    target.innerHTML = "Check your email!";
+                    input.style.display = "none"
+                    target.innerHTML = "Hvala sto se registrovali za nas webinar! <br> E-Mail sa ZOOM linkom ce u par minuta stici u tvoj inbox.  ";
                 }
             });
         });
 
-        // configuration of the observer:
+
         var config = { attributes: true, childList: true, characterData: true };
 
-        // pass in the target node, as well as the observer options
+
         observer.observe(target, config);
     </script>
-
 </body>
 
 </html>
