--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="header">
                 <h1>
                     KO SI TI ONLINE <br />
-                    I KAKO TE REGRUTERI "citaju"?
+                    I KAKO TE REGRUTERI "čitaju"?
                 </h1>
             </div>
 
@@ -90,7 +90,7 @@
 
                 <div class="profile profile-2">
                     <img src="/Nikola.jpg" alt="" />
-                    <p class="name">Nikola Dojcinovic</p>
+                    <p class="name">Nikola Dojčinović</p>
                     <p class="role">
                         FrontEnd Developer <br />
                         React Instruktor
